# wasm-zkp-challenge

./: Cargo.toml
benches/: bench_pippenger_msm.rs
src/: lib.rs  msm.rs
