[package]
name = "wasm-zkp-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "lib"]


[patch.crates-io]
ark-std = {git = "https://github.com/arkworks-rs/utils"}
ark-ec = {git = "https://github.com/arkworks-rs/algebra"}
ark-ff = {git = "https://github.com/arkworks-rs/algebra"}
ark-serialize = {git = "https://github.com/arkworks-rs/algebra"}
ark-serialize-derive = {git = "https://github.com/arkworks-rs/algebra"}
ark-poly = {git = "https://github.com/arkworks-rs/algebra"}
ark-poly-commit = {git = "https://github.com/arkworks-rs/poly-commit"}
ark-bls12-381 = {git = "https://github.com/arkworks-rs/curves"}
ark-relations = {git = "https://github.com/arkworks-rs/snark"}

[dependencies]
# wasm dependencies
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"]}

# crypto dependencies
rand_chacha = { version = "0.3.1", default-features = false }
rand = { version = "0.7.3", features = ["wasm-bindgen"]}
rand_xorshift = { version = "0.2" }
ark-ff = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-std = "0.3.0"
ark-ec = "0.3.0"

[dev-dependencies]
criterion = "0.3"

[profile.test]
opt-level = 3

[[bench]]
name = "bench_pippenger_msm"
harness = false